<resources>
    <string name="app_name">Demo App</string>
    <string name="manga_title">Captain Tsubasa: Rising Sun</string>
    <string name="manga_author">Yoichi Takahashi</string>
    <string name="manga_description">Rising Sun will revolve around Tsubasa participating in the Olympics as a representative from Japan.\n\nCaptain Tsubasa (Japanese: キャプテン翼 Hepburn: Kyaputen Tsubasa), is a popular long-running Japanese manga series, originally created by Yōichi Takahashi in 1981.[1] The series mainly revolves around the sport of association football focusing on Tsubasa Oozora. The series is characterized by dynamic and exciting football moves, often stylish and implausible. The plot focuses on Tsubasa\'s relationship with his friends, rivalry with his opponents, training, competition and the action and outcome of each football match. Across the multiple Captain Tsubasa mangas, the plot shows Tsubasa\'s and his friends\' growth as they face new rivals. Takahashi decided to create Captain Tsubasa inspired by 1978 FIFA World Cup in Argentina.\n\nThe Captain Tsubasa manga series was originally serialized in Shueisha\'s Weekly Shōnen Jump comic book magazine between 1981 and 1988, spanning a total of 37 tankōbon volumes. This was followed by numerous sequels. Captain Tsubasa and its sequels have sold over 80 million copies worldwide,[2] making it one of the best-selling manga series. The original Captain Tsubasa manga series was adapted into a TV animation series, produced by Tsuchida Production, whose first season premiered in Japan on the TV Tokyo network between October 10, 1983 and March 27, 1986. Numerous movies and television series have followed with the latest one starting in April 2018.\n\nCaptain Tsubasa became into one of the most memorable manga and anime worldwide, most notably in Japan due to how it popularized association football. Multiple real life players have been inspired to become professionals after seeing the series. In a poll conducted by TV Asahi in 2005, the Captain Tsubasa anime series ranked 41 in a list of top 100 anime series.[3]</string>
    <string name="text_demo_1">Demo 1</string>
    <string name="manga_chapters">88 chapters</string>
    <string name="manga_genres">Seinen, Sports</string>
</resources>
